--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,6 +7,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - uses: "actions/checkout@v3"
       - uses: "DeterminateSystems/nix-installer-action@main"
       - uses: "DeterminateSystems/magic-nix-cache-action@main"
       - run: |
