Make the manifest output more closure specific

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
           set -eux
 
           nix flake check --all-systems
-          nix build .#manifest
+          nix build .#closures_nix
 
           mkdir ./artifacts
           cat './result' > './artifacts/universal'
