--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
           set -eux
 
           # Ensure all the checks can be built without internet
-          nix flake check --all-systems --jobs 0
+          nix flake check --all-systems --max-jobs 0
           nix build .#tarballs_json
           cat result
 
