Drop --all-systems since Nix's flake.nix now does some IFD

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -24,7 +24,7 @@ jobs:
           set -eux
 
           # Ensure all the checks can be built without internet
-          nix flake check --all-systems
+          nix flake check
           nix build .#tarballs_json
           cat result
 
@@ -63,7 +63,7 @@ jobs:
           set -eux
 
           # Ensure all the checks can be built without internet
-          nix flake check --all-systems
+          nix flake check
           nix build .#tarballs_json
           cat result
 
