--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -86,6 +86,6 @@ jobs:
       - uses: "DeterminateSystems/flakehub-push@main"
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
-          visibility: "public"
+          visibility: "unlisted"
           name: "DeterminateSystems/nix"
           tag: "${{ github.ref_name }}"
